@startuml
class Sudoku{
-String Id
-SudokuArray gameField
-SudokuArray gameField
-SudokuArray gameField
-SudokuChange lastChange
-Difficulty difficulty
+SudokuArray getInitialGameField()
+SudokuArray getSolvedGameField()
+setInitialGameField(SudokuArray initialGameField)
+setSolvedGameField(SudokuArray solvedGameField)
+boolean setField(int row, int col, int value)
+Difficulty getDifficulty()
+String getId()
+SudokuArray getGameField()
+SudokuChange getLastChange()
+boolean equals(Object o)
+int hashCode()
}

interface SudokuPersistencePort {
   void saveSudoku(Sudoku sudoku)
   List<SudokuSaveEntry> getAllSudokus()
   Optional<SudokuSaveEntry> getSudoku(String saveId)
   deleteSudoku(String saveId)
}

class SudokuPersistenceAdapter {
  + void saveSudoku(Sudoku sudoku)
  + List<SudokuSaveEntry> getAllSudokus()
  + Optional<SudokuSaveEntry> getSudoku(String saveId)
  + deleteSudoku(String saveId)
}

SudokuPersistenceAdapter--|>SudokuPersistencePort
SudokuPersistenceAdapter-->Sudoku
SudokuPersistencePort-->Sudoku
@enduml
